--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,12 @@ apply plugin: 'maven-publish'
 
 version = '1.0.0'
 group = 'com.blamejared.jeitweaker'
-archivesBaseName = 'JEITweaker'
+archivesBaseName = 'JEITweaker-1.14.4'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200225-1.15.1'
+    mappings channel: 'snapshot', version: '20190719-1.14.3'
     runs {
         client {
             workingDirectory project.file('run')
@@ -65,9 +65,9 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.1.19'
-    compile fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2");
-    compile fg.deobf("com.blamejared.crafttweaker:CraftTweaker-1.15.2:6.0.0.9");
+    minecraft 'net.minecraftforge:forge:1.14.4-28.2.4'
+    compile fg.deobf("mezz.jei:jei-1.14.4:6.0.0.18");
+    compile fg.deobf("com.blamejared.crafttweaker:CraftTweaker-1.14.4:5.0.1.172");
 }
 
 jar {
