--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ if (System.getenv('BUILD_NUMBER') != null) {
     version += "." + System.getenv('BUILD_NUMBER')
 }
 group = 'com.blamejared.jeitweaker'
-archivesBaseName = 'JEITweaker'
+archivesBaseName = 'JEITweaker-1.16.1'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
