--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,12 @@
 modLoader="javafml"
 loaderVersion="[32,)"
+license="MIT"
 [[mods]]
 modId="jeitweaker"
 version="${file.jarVersion}"
 displayName="JEI Tweaker"
 authors="Jaredlll08"
-updateJSONURL="https://updates.blamejared.com/get?n=JEITweaker&gv=1.16.1"
+updateJSONURL="https://updates.blamejared.com/get?n=JEITweaker&gv=1.16.2"
 description='''
 Adds JEI integration for CraftTweaker
 '''
