--- a/build.gradle
+++ b/build.gradle
@@ -99,11 +99,18 @@ modTemplate {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
-    annotationProcessor "com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.16.5:1.0.0.431"
-    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-1.16.5:7.1.2.431")
-    compileOnly "mezz.jei:jei-1.16.5:7.7.1.121:api"
-    runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.1.121");
+    def mcDep = minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
+    def ctDep = fg.deobf('com.blamejared.crafttweaker:CraftTweaker-1.16.5:7.1.2.431')
+
+    implementation ctDep
+    compileOnly 'mezz.jei:jei-1.16.5:7.7.1.121:api'
+    runtimeOnly fg.deobf('mezz.jei:jei-1.16.5:7.7.1.121')
+
+    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.16.5:1.0.0.431'
+    annotationProcessor 'com.google.code.gson:gson:2.8.6'
+    annotationProcessor 'org.reflections:reflections:0.9.10'
+    annotationProcessor mcDep
+    annotationProcessor ctDep
 }
 
 jar {
@@ -113,7 +120,7 @@ jar {
                 "Specification-Vendor"    : "BlameJared",
                 "Specification-Version"   : "1",
                 "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${version}",
+                "Implementation-Version"  : "${archiveVersion}",
                 "Implementation-Vendor"   : "BlameJared",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
