--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,13 @@
 *.patch text eol=lf
 *.java text eol=lf
 *.gradle text eol=crlf
+*.png binary
+*.gif binary
+*.exe binary
+*.dll binary
+*.jar binary
+*.lzma binary
+*.zip binary
+*.pyd binary
+*.cfg text eol=lf
+*.jks binary
