--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,32 @@
 * text eol=lf
-*.bat text eol=crlf
-*.patch text eol=lf
-*.java text eol=lf
-*.gradle text eol=crlf
-*.png binary
-*.gif binary
-*.exe binary
-*.dll binary
-*.jar binary
-*.lzma binary
-*.zip binary
-*.pyd binary
-*.cfg text eol=lf
-*.jks binary
+*.bat           text eol=crlf
+*.bash          text eol=lf
+*.css           text diff=css
+*.htm           text diff=html
+*.html          text diff=html
+*.java          text diff=java
+*.sh            text eol=lf
+*.a             binary
+*.lib           binary
+*.icns          binary
+*.png           binary
+*.jpg           binary
+*.jpeg          binary
+*.gif           binary
+*.ico           binary
+*.mov           binary
+*.mp4           binary
+*.mp3           binary
+*.flv           binary
+*.fla           binary
+*.swf           binary
+*.gz            binary
+*.zip           binary
+*.jar           binary
+*.tar           binary
+*.tar.gz        binary
+*.7z            binary
+*.ttf           binary
+*.pyc           binary
+*.gpg           binary
+*.bin           binary
