--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,10 +10,21 @@ updateJSONURL = "https://updates.blamejared.com/get?n=JEITweaker&gv=1.16.5"
 description = '''
 Adds JEI integration for CraftTweaker
 '''
-
-[[dependencies.jeitweaker]]
-modId = "jei"
-mandatory = true
-versionRange = "[7.7.1.110,)"
-ordering = "NONE"
-side = "BOTH"
+  [[dependencies.jeitweaker]]
+	modId = "forge"
+	mandatory = true
+	versionRange = "[32,)"
+	ordering = "NONE"
+	side = "BOTH"
+  [[dependencies.jeitweaker]]
+	modId = "minecraft"
+	mandatory = true
+	versionRange = "[1.16.1,)"
+	ordering = "NONE"
+	side = "BOTH"
+  [[dependencies.jeitweaker]]
+	modId = "jei"
+	mandatory = true
+	versionRange = "[7.7.1.110,)"
+	ordering = "NONE"
+	side = "BOTH"
