Let JeiTweaker load on servers
While this is not the best idea, the various classes safely act as a
classloading barrier, so no issues there. Also, we need to maintain
backwards compatibility.

This workaround will be removed in 1.17.

Fix #28

Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ minecraft {
         }
 
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('run_server')
 
             mods {
                 jeitweaker {
@@ -131,16 +131,17 @@ jar {
 
 javadoc {
     include(
-        'com/blamejared/jeitweaker/api/**',
-        'com/blamejared/jeitweaker/bridge/JeiCategoryPluginBridge.java',
-        'com/blamejared/jeitweaker/bridge/package-info.java',
-        'com/blamejared/jeitweaker/zen/package-info.java',
-        'com/blamejared/jeitweaker/zen/category/JeiCategory.java',
-        'com/blamejared/jeitweaker/zen/category/SimpleJeiCategory.java',
-        'com/blamejared/jeitweaker/zen/category/package-info.java',
-        'com/blamejared/jeitweaker/zen/component/**',
-        'com/blamejared/jeitweaker/zen/recipe/RecipeGraphics.java',
-        'com/blamejared/jeitweaker/zen/recipe/package-info.java'
+            'com/blamejared/jeitweaker/api/**',
+            'com/blamejared/jeitweaker/bridge/JeiCategoryPluginBridge.java',
+            'com/blamejared/jeitweaker/bridge/package-info.java',
+            'com/blamejared/jeitweaker/zen/JeiManager.java',
+            'com/blamejared/jeitweaker/zen/package-info.java',
+            'com/blamejared/jeitweaker/zen/category/JeiCategory.java',
+            'com/blamejared/jeitweaker/zen/category/SimpleJeiCategory.java',
+            'com/blamejared/jeitweaker/zen/category/package-info.java',
+            'com/blamejared/jeitweaker/zen/component/**',
+            'com/blamejared/jeitweaker/zen/recipe/RecipeGraphics.java',
+            'com/blamejared/jeitweaker/zen/recipe/package-info.java'
     )
     options.tags = [
             'apiNote:a:Api Note:',
