Update CraftTweaker and add auto-generated docs
Signed-off-by: TheSilkMiner <thesilkminer@outlook.com>

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ repositories {
         url "https://maven.blamejared.com"
         content {
             includeGroup("com.blamejared.crafttweaker")
+            includeGroup("org.openzen.zencode")
         }
     }
 }
@@ -100,19 +101,17 @@ modTemplate {
 
 dependencies {
     def mcDep = minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
-    def ctDep = fg.deobf('com.blamejared.crafttweaker:CraftTweaker-1.16.5:7.1.2.431')
+    def ctDep = fg.deobf('com.blamejared.crafttweaker:CraftTweaker-1.16.5:7.1.2.470')
 
     implementation ctDep
     compileOnly 'mezz.jei:jei-1.16.5:7.7.1.121:api'
     runtimeOnly fg.deobf('mezz.jei:jei-1.16.5:7.7.1.121')
 
-    /*
-    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.16.5:1.0.0.431'
+    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.16.5:1.0.0.470'
     annotationProcessor 'com.google.code.gson:gson:2.8.6'
     annotationProcessor 'org.reflections:reflections:0.9.10'
     annotationProcessor mcDep
     annotationProcessor ctDep
-    */
 }
 
 jar {
