--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ apply plugin: 'com.blamejared.modtemplate'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = com.blamejared.modtemplate.Utils.updatingVersion('1.1.0')
+version = com.blamejared.modtemplate.Utils.updatingVersion('2.0.0')
 group = 'com.blamejared.jeitweaker'
-archivesBaseName = 'JEITweaker-1.16.5'
+archivesBaseName = 'JEITweaker-1.17.1'
 
 java {
-    toolchain.languageVersion = JavaLanguageVersion.of(JavaVersion.VERSION_1_8.majorVersion)
+    toolchain.languageVersion = JavaLanguageVersion.of(16)
 }
 
 repositories {
@@ -41,7 +41,7 @@ repositories {
     }
 }
 minecraft {
-    mappings channel: 'snapshot', version: '20201028-1.16.3'
+    mappings channel: 'official', version: '1.17.1'
     runs {
         client {
             workingDirectory project.file('run')
@@ -78,7 +78,7 @@ minecraft {
 }
 
 modTemplate {
-    mcVersion "1.16.5"
+    mcVersion "1.17.1"
     curseHomepage "https://www.curseforge.com/minecraft/mc-mods/jeitweaker"
     displayName "JEITweaker"
 
@@ -100,18 +100,18 @@ modTemplate {
 }
 
 dependencies {
-    def mcDep = minecraft 'net.minecraftforge:forge:1.16.5-36.2.0'
-    def ctDep = fg.deobf('com.blamejared.crafttweaker:CraftTweaker-1.16.5:7.1.2.470')
+    def mcDep = minecraft 'net.minecraftforge:forge:1.17.1-37.1.1'
+    def ctDep = fg.deobf('com.blamejared.crafttweaker:CraftTweaker-forge-1.17.1:8.0.0+15')
 
     implementation ctDep
-    compileOnly 'mezz.jei:jei-1.16.5:7.7.1.121:api'
-    runtimeOnly fg.deobf('mezz.jei:jei-1.16.5:7.7.1.121')
+    compileOnly 'mezz.jei:jei-1.17.1:8.1.0.26:api'
+    runtimeOnly fg.deobf('mezz.jei:jei-1.17.1:8.1.0.26')
 
-    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.16.5:1.0.0.470'
-    annotationProcessor 'com.google.code.gson:gson:2.8.6'
-    annotationProcessor 'org.reflections:reflections:0.9.10'
-    annotationProcessor mcDep
-    annotationProcessor ctDep
+//    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.17.1:2.0.0.15'
+//    annotationProcessor 'com.google.code.gson:gson:2.8.6'
+//    annotationProcessor 'org.reflections:reflections:0.9.10'
+//    annotationProcessor mcDep
+//    annotationProcessor ctDep
 }
 
 jar {
@@ -237,7 +237,7 @@ curseforge {
         releaseType = 'release'
         changelog = file("changelog.md")
         changelogType = 'markdown'
-        addGameVersion '1.16.4'
+        addGameVersion '1.17.1'
 
 //        addArtifact(sourcesJar)
 //        addArtifact(javadocJar)
