--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,11 @@ minecraft {
             }
         }
     }
+
+    runs.configureEach {
+        property 'mixin.env.remapRefMap', 'true'
+        property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+    }
 }
 
 modTemplate {
