--- a/build.gradle
+++ b/build.gradle
@@ -106,15 +106,16 @@ modTemplate {
 }
 
 dependencies {
-    def ctDep = 'com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.86'
+    def ctDep = 'com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.185'
     // Not actually sure if this even works, or if it is even required.
-    def mcDep = 'net.minecraftforge:forge:1.18.2-40.0.36'
+    def mcDep = 'net.minecraftforge:forge:1.18.2-40.1.73'
     minecraft mcDep
 
 
     implementation fg.deobf(ctDep)
-    compileOnly 'mezz.jei:jei-1.18.2:9.5.5.174:api'
-    runtimeOnly fg.deobf('mezz.jei:jei-1.18.2:9.5.5.174')
+    compileOnly fg.deobf('mezz.jei:jei-1.18.2-common-api:10.1.3.240')
+    compileOnly fg.deobf('mezz.jei:jei-1.18.2-forge-api:10.1.3.240')
+    runtimeOnly fg.deobf('mezz.jei:jei-1.18.2-forge:10.1.3.240')
 
     annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.18.2:2.0.0.86'
     annotationProcessor 'com.google.code.gson:gson:2.8.6'
