--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -23,7 +23,7 @@ side="BOTH"
 [[dependencies.jeitweaker]]
 modId="forge"
 mandatory=true
-versionRange="[47.1.3]"
+versionRange="[47.1.3,)"
 ordering="NONE"
 side="BOTH"
 [[dependencies.jeitweaker]]
